making the social buttons a little bigger

--- a/index.html
+++ b/index.html
@@ -199,10 +199,11 @@
         }
 
         #social li {
-            width: 2.5em;
-            height: 2.5em;
+            width: 3em;
+            height: 3em;
             margin: 0.5rem;
             border-radius: 100%;
+            overflow: visible;
         }
 
         #social li:hover {
