adding a min size to the social buttons

--- a/index.html
+++ b/index.html
@@ -201,9 +201,10 @@
         #social li {
             width: 3em;
             height: 3em;
+            min-width: 33px;
+            min-height: 33px;
             margin: 0.5rem;
             border-radius: 100%;
-            overflow: visible;
         }
 
         #social li:hover {
