--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Salty Seahorse Shop</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="Hand-crafted, locally inspired soy candles.  Made exclusively with repurposed glass containers.">
     <meta property="og:site_name" content="Salty Seahorse Shop">
     <meta property="og:title" content="Soy Candles with a Cause">
