--- a/index.html
+++ b/index.html
@@ -331,6 +331,16 @@
             }
         }
 
+        @media(max-height: 400px) {
+            #main .section {
+                padding: 1em 2em;
+            }
+
+            #main .section.dark {
+                padding: 0.75em 2em;
+            }
+        }
+
         #mc_embed_signup {
             background: transparent;
             clear: left;
