updating description metadata

--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="description" content="Hand-crafted, locally inspired soy candles.  Made exclusively with repurposed glass containers.">
+    <meta name="description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
     <meta property="og:site_name" content="Salty Seahorse Shop">
     <meta property="og:title" content="Soy Candles with a Cause">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
-    <meta property="og:description" content="Hand-crafted, locally inspired soy candles.  Made exclusively with repurposed glass containers.">
+    <meta property="og:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
     <meta property="og:url" content="https://www.saltyseahorseshop.com">
     <meta property="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
