--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Salty Seahorse Shop</title>
+    <title>Salty Seahorse Shop | Coastal Candles with a Cause</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
     <meta property="og:site_name" content="Salty Seahorse Shop">
-    <meta property="og:title" content="Soy Candles with a Cause">
+    <meta property="og:title" content="Coastal Candles with a Cause">
     <meta property="og:type" content="website">
     <meta property="og:image" content="">
     <meta property="og:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
