--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta property="og:site_name" content="Salty Seahorse Shop">
     <meta property="og:title" content="Coastal Candles with a Cause">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="assets/images/salty-seahorse-shop.jpg">
     <meta property="og:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
-    <meta property="og:url" content="https://www.saltyseahorseshop.com">
+    <meta property="og:url" content="saltyseahorseshop.com">
     <meta property="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
@@ -92,6 +92,10 @@
             padding: 1rem 1.5rem;
             font-size: 1em;
             font-weight: 100;
+        }
+
+        button:active, button:hover {
+            background: rgb(80, 170, 184);
         }
 
         #main {
