--- a/index.html
+++ b/index.html
@@ -383,6 +383,16 @@
             transform: translateX(-50%);
         }
     </style>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112594073-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-112594073-1');
+    </script>
 </head>
 
 <body>
