tweaking share text

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
-    <meta property="og:site_name" content="Salty Seahorse Shop">
-    <meta property="og:title" content="Coastal Candles with a Cause">
+    <meta property="og:site_name" content="Salty Seahorse Shop | Coastal Candles with a Cause">
+    <meta property="og:title" content="Salty Seahorse Shop | Coastal Candles with a Cause">
     <meta property="og:type" content="website">
     <meta property="og:image" content="assets/images/salty-seahorse-shop.jpg">
     <meta property="og:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
