--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta property="og:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
     <meta property="og:url" content="saltyseahorseshop.com">
     <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:site" content="@salty_seahorse_">
+    <meta property="twitter:creator" content="@salty_seahorse_">
+    <meta property="twitter:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
+    <meta property="twitter:image" content="assets/images/salty-seahorse-shop.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
     <style type="text/css">
