--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <meta property="twitter:creator" content="@salty_seahorse_">
     <meta property="twitter:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
     <meta property="twitter:image" content="assets/images/salty-seahorse-shop.jpg">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
+
+    <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300">
+    <link rel="prefetch" href="assets/images/bg.png">
+    <link rel="prefetch" href="assets/images/logo.png">
 
     <style type="text/css">
         html,
