--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
         var formClose = document.getElementById("formClose");
         formClose.onclick = function () {
-            setModalVisibility(true);
+            setModalVisibility(false);
         }
 
         var notifyForm = document.getElementById("mc-embedded-subscribe-form");
