tweaking spacing on the signup form

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         }
 
         #notifyForm .form-wrapper {
-            padding: 3em;
+            padding: 2em;
             display: -webkit-box;
             display: -ms-flexbox;
             display: flex;
@@ -285,7 +285,7 @@
             -webkit-box-align: center;
             -ms-flex-align: center;
             align-items: center;
-            margin-bottom: 1em;
+            margin-bottom: 1.5em;
         }
 
         #notifyForm .form-wrapper .form-title #formClose {
@@ -369,7 +369,6 @@
             font-weight: 100;
             font-size: 1em;
             font-family: 'Open Sans Condensed', sans-serif;
-            margin-top: 1em;
         }
 
         .mc-field-group input {
@@ -377,6 +376,7 @@
             font-size: 1.25em;
             font-family: inherit;
             margin: 0.5em 0;
+            min-width: 2em;
         }
 
         .mc-field-group input.birthday {
