looks like some browsers don't like prefetching

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300">
     <link rel="prefetch" href="assets/images/bg.png">
     <link rel="prefetch" href="assets/images/logo.png">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
     <style type="text/css">
         html,
