--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
             -webkit-box-align: center;
             -ms-flex-align: center;
             align-items: center;
-            margin-bottom: 1.5em;
+            margin-bottom: 1em;
         }
 
         #notifyForm .form-wrapper .form-title #formClose {
@@ -376,8 +376,8 @@
             padding: 0.25em 0.5em;
             font-size: 1.25em;
             font-family: inherit;
-            margin: 0.5em 0;
-            min-width: 2em;
+            margin: 0.25em 0 0.5em 0;
+            min-width: 1.5em;
         }
 
         .mc-field-group input.birthday {
@@ -392,7 +392,7 @@
             padding: 1rem 1.5rem;
             font-size: 1em;
             font-weight: 100;
-            margin-top: 2em;
+            margin-top: 1em;
             margin-left: 50%;
             -webkit-transform: translateX(-50%);
             -ms-transform: translateX(-50%);
