--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             -webkit-box-align: center;
             -ms-flex-align: center;
             align-items: center;
-            margin-bottom: 1em;
+            margin-bottom: 2em;
         }
 
         #notifyForm .form-wrapper .form-title #formClose {
@@ -344,6 +344,10 @@
 
             #notifyForm {
                 justify-content: flex-start;
+            }
+
+            #notifyForm .form-wrapper .form-title {
+                margin-bottom: 1em;
             }
         }
 
