--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="twitter:image" content="assets/images/salty-seahorse-shop.jpg">
 
     <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300">
-    <link rel="prefetch" href="assets/images/bg.png">
+    <link rel="prefetch" href="assets/images/bg.jpg">
     <link rel="prefetch" href="assets/images/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
