--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <meta property="twitter:description" content="Hand-crafted, locally-inspired soy candles made exclusively from repurposed glass in Orange Beach, AL">
     <meta property="twitter:image" content="assets/images/salty-seahorse-shop.jpg">
 
-    <link rel="prefetch" href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300">
-    <link rel="prefetch" href="assets/images/bg.jpg">
-    <link rel="prefetch" href="assets/images/logo.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com/">
+    <link rel="preload" as="img" href="assets/images/bg.jpg">
+    <link rel="preload" as="img" href="assets/images/logo.png">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Open+Sans+Condensed:300" rel="stylesheet">
 
     <style type="text/css">
