--- a/index.html
+++ b/index.html
@@ -569,10 +569,11 @@
             setModalVisibility(false);
         }
 
-        setTimeout(function () {
+        var logo = document.getElementById("logo");
+        logo.onload = function() {
             var main = document.getElementById("main");
             main.classList.add("is-ready");
-        }, 50);
+        };
     </script>
 
 </body>
